--- a/src/styles/layouts/_resa.scss
+++ b/src/styles/layouts/_resa.scss
@@ -160,15 +160,17 @@
       }
 
       .map-container {
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        height: 200px;
+        flex-direction: row;
 
         .map {
           width: 100%;
-          height: 250px;
+          height: 100%;
+        }
+
+        .route-map {
+          width: 200px;
+          height: 100%;
         }
       }
     }
